--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
                   <img
                      class="mySlides"
                      src="./images/desktop-image-hero-1.jpg"
+                     alt="hero-1"
                   />
                   <img
                      class="mySlides"
                      src="./images/desktop-image-hero-2.jpg"
+                     alt="hero-2"
                   />
                   <img
                      class="mySlides"
                      src="./images/desktop-image-hero-3.jpg"
+                     alt="hero-3"
                   />
                </div>
                <div class="flex">
@@ -57,7 +60,7 @@
                         make your property a reflection of you and what you
                         love.
                      </p>
-                     <button class="shop_btn">
+                     <button type="button" class="shop_btn">
                         Shop now
 
                         <img src="./images/icon-arrow.svg" alt="icon arrow" />
@@ -74,7 +77,7 @@
                         locator. Any questions? Don't hesitate to contact us
                         today.
                      </p>
-                     <button class="shop_btn">
+                     <button type="button" class="shop_btn">
                         Shop now
 
                         <img src="./images/icon-arrow.svg" alt="icon arrow" />
@@ -91,17 +94,17 @@
                         in this industry, we understand what customers want for
                         their home and office.
                      </p>
-                     <button class="shop_btn">
+                     <button type="button" class="shop_btn">
                         Shop now
 
                         <img src="./images/icon-arrow.svg" alt="icon arrow" />
                      </button>
                   </div>
                   <div class="btn">
-                     <button onclick="plusDivs(-1)">
+                     <button type="button" name="btn" onclick="plusDivs(-1)">
                         <img src="./images/icon-angle-left.svg" alt="" />
                      </button>
-                     <button onclick="plusDivs(1)">
+                     <button type="button" name="btn" onclick="plusDivs(1)">
                         <img src="./images/icon-angle-right.svg" alt="" />
                      </button>
                   </div>
