--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                      </button>
                   </div>
                   <div class="btn">
-                     <button type="button" name="btn" onclick="plusDivs(-1)">
+                     <button type="button" onclick="plusDivs(-1)">
                         <img src="./images/icon-angle-left.svg" alt="" />
                      </button>
-                     <button type="button" name="btn" onclick="plusDivs(1)">
+                     <button type="button" onclick="plusDivs(1)">
                         <img src="./images/icon-angle-right.svg" alt="" />
                      </button>
                   </div>
