--- a/index.html
+++ b/index.html
@@ -102,10 +102,16 @@
                   </div>
                   <div class="btn">
                      <button type="button" onclick="plusDivs(-1)">
-                        <img src="./images/icon-angle-left.svg" alt="" />
+                        <img
+                           src="./images/icon-angle-left.svg"
+                           alt="angle left"
+                        />
                      </button>
                      <button type="button" onclick="plusDivs(1)">
-                        <img src="./images/icon-angle-right.svg" alt="" />
+                        <img
+                           src="./images/icon-angle-right.svg"
+                           alt="angle right"
+                        />
                      </button>
                   </div>
                </div>
