--- a/index.html
+++ b/index.html
@@ -101,13 +101,21 @@
                      </button>
                   </div>
                   <div class="btn">
-                     <button type="button" onclick="plusDivs(-1)">
+                     <button
+                        class="favorite"
+                        type="button"
+                        onclick="plusDivs(-1)"
+                     >
                         <img
                            src="./images/icon-angle-left.svg"
                            alt="angle left"
                         />
                      </button>
-                     <button type="button" onclick="plusDivs(1)">
+                     <button
+                        class="favorite"
+                        type="button"
+                        onclick="plusDivs(1)"
+                     >
                         <img
                            src="./images/icon-angle-right.svg"
                            alt="angle right"
